[package]
name = "probe"
version = "0.1.0"
edition = '2021'


[dependencies]
cty = "0.2"
redbpf-macros = "2.3.0"
redbpf-probes = "2.3.0"
memoffset = "*"
no-std-net = "0.6.0"

[build-dependencies]
cargo-bpf = { version = "2.3.0", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"


[[bin]]
name = "dns_queries"
path = "src/main.rs"
required-features = ["probes"]
