[package]
name = "bpf-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf = { version = "2.3.0", features = ["load"] }
tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
tracing-subscriber = "0.3"
tracing = "0.1"
futures = "0.3"
libc = "*"
probe = { path = "../probe" }

[build-dependencies]
cargo-bpf = { version="2.3.0",default-features = false, features = ["build","llvm13"] }
