[package]
name = "bpf-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf = { version = "2.3.0", features = ["load"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "signal", "time", "io-util", "net", "sync"] }
tracing-subscriber = "0.3"
tracing = "0.1"
tokio-fd = "0.3.0"
dns-parser = "0.8.0"
libc = "0.2"

[build-dependencies]
cargo-bpf = { version="2.3.0",default-features = false, features = ["build","llvm13"] }
